unpackaged/main/default/objects/SiteVisit__c/SiteVisit__c.object-meta.xml
<CustomObject>
    <description>Geolocation for a collection of images</description>
    <label>Site Visit</label>
    <nameField>
        <label>Site Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Visit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>