unpackaged/main/default/objects/SiteVisit__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>