unpackaged/main/default/objects/SiteVisit__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>